services/proxy/kubernetes/Service.traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  ports:
    - name: dashboard
      port: 8080
      targetPort: dashboard
    - name: web
      port: 80
      targetPort: web
  selector:
    app: traefik
