services/proxy/kubernetes/Ingress.traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  rules:
    - http:
        paths:
          - path: /dashboard/
            pathType: Prefix
            backend:
              service:
                name: traefik-service
                port:
                  name: dashboard
